# gtfsr_kit

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: test.yml
gtfsr_kit/: __init__.py  main.py  main.py.bak
notebooks/: examples.py
tests/: test_main.py  test_main.py.bak
